--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1, h2, h3, h4, p {
+    @apply font-outfit;
+  }
+}
