--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap');
 @import url('@flaticon/flaticon-uicons/css/all/all.straight');
+@import url('@flaticon/flaticon-uicons/css/brands/all');
 
 @tailwind base;
 @tailwind components;
