--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 @tailwind utilities;
 
 @layer base {
-  h1, h2, h3, h4, p {
+  h1, h2, h3, h4, p, small, address {
     @apply font-outfit;
   }
 }
