--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap');
 @import url('@flaticon/flaticon-uicons/css/all/all.straight');
 @import url('@flaticon/flaticon-uicons/css/brands/all');
+@import url('slick-carousel/slick/slick.css'); 
+@import url('slick-carousel/slick/slick-theme.css');
 
 @tailwind base;
 @tailwind components;
